vmm: api: Add a VMM shutdown command
This shuts the current VM down, if any, and then exits the VMM process.
